fix the classification icon and card ui overflow

--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -486,6 +486,7 @@ a[href].link-text-grey,
 // breadcrumb
 
 .breadcrumb-item {
+  max-width: 100%;
   font-size: 12px;
   .link-title {
     font-size: inherit !important;
